2010-08-13  Paul Smith  <psmith@gnu.org>

	* NEWS: Accidentally forgot to back out the sorted wildcard
	enhancement in 3.82, so update NEWS.
	Also add NEWS about the error check for explicit and pattern
	targets in the same rule, added to 3.82.

	* main.c (main): Add "oneshell" to $(.FEATURES) (forgot to add
	this in 3.82!)

	* read.c (parse_file_seq): Fix various errors parsing archives
	with multiple objects in the parenthesis, as well as wildcards.
	Fixes Savannah bug #30612.

2010-08-10  Paul Smith  <psmith@gnu.org>

	* main.c (main): Expand MAKEFLAGS before adding it to the
	environment when re-exec'ing.  Fixes Savannah bug #30723.

2010-08-07  Eli Zaretskii  <eliz@gnu.org>

	* w32/subproc/build.bat: Make all 3 cl.exe compile command lines
	use the same /I switches.  Fixes Savannah bug #30662.

	* function.c (func_shell) [WINDOWS32]: Reset just_print_flag
	around the call to construct_command_argv, so that a temporary
	batch file _is_ created when needed for $(shell).
	Fixes Savannah bug #16362.

2010-08-07 Juan Manuel Guerrero  <juan.guerrero@gmx.de>

	* configh.dos.template (HAVE_STRNCASECMP): Define.

2010-07-28  Paul Smith  <psmith@gnu.org>

	Version 3.82 released.

	* configure.in: Change release version.
	* NEWS: Change the date.

	* read.c (parse_file_seq): Remove GLOB_NOSORT for
	backward-compatibility.  We'll add it back in next release.
	* NEWS: Note it.

2010-07-24  Eli Zaretskii  <eliz@gnu.org>

	* job.c (pid2str) [WINDOWS32]: Fix CPP conditionals for using %Id
	format.

2010-07-18  Paul Smith  <psmith@gnu.org>

	* configure.in: Switch bsd_signal to AC_CHECK_DECLS() to make sure
	we have a declaration.  Fixes Savannah bug #25713 (maybe?)
	* doc/make.texi (Complex Makefile): Cleanup variable assignments.
	(One Shell): New subsection for the .ONESHELL special target.

	Patches by Ozkan Sezer <sezeroz@gmail.com>:

	* misc.c (strncasecmp): Local implementation for systems without.
	* config.h.W32.template (HAVE_STRNICMP): Define on Windows.